@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-03-24T08:25:15Z",
-  "count_outdated" : 399,
-  "uniques_outdated" : 215,
+  "timestamp" : "2022-03-25T08:25:20Z",
+  "count_outdated" : 403,
+  "uniques_outdated" : 217,
   "count" : 409,
   "uniques" : 221,
   "clones" : [
-    {
-      "timestamp": "2022-03-11T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-03-22T00:00:00Z",
       "count": 4,
