@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 5,
+  "count": 6,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-03-11T00:00:00Z",
-      "count": 4,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-03-22T00:00:00Z",
       "count": 4,
